--- a/index.html
+++ b/index.html
@@ -278,12 +278,12 @@
         
         <!-- Tech stack tag -->
         <div class="mt-6 pl-4 flex flex-wrap gap-2">
-            <span class="px-3 py-1 ai-bg rounded-full text-xs ai-color">Neural Networks</span>
+            <span class="px-3 py-1 ai-bg rounded-full text-xs ai-color">Industrial Automation</span>
             <span class="px-3 py-1 ml-bg rounded-full text-xs ml-color">Deep Learning</span>
-            <span class="px-3 py-1 automation-bg rounded-full text-xs automation-color">RPA</span>
-            <span class="px-3 py-1 bg-gray-800 rounded-full text-xs text-gray-300">Process Mining</span>
+            <span class="px-3 py-1 automation-bg rounded-full text-xs automation-color">Warehouse Robotics</span>
+            <span class="px-3 py-1 bg-gray-800 rounded-full text-xs text-gray-300">Logistics & Supply Chain Automation</span>
             <span class="px-3 py-1 bg-gray-800 rounded-full text-xs text-gray-300">Workflow Automation</span>
-            <span class="px-3 py-1 bg-gray-800 rounded-full text-xs text-gray-300">Predictive Analytics</span>
+            <span class="px-3 py-1 bg-gray-800 rounded-full text-xs text-gray-300">Sensors and Data Analytics</span>
         </div>
     </div>
     
